--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
     "@fortawesome/free-solid-svg-icons": "5.11.2",
     "@fortawesome/vue-fontawesome": "0.1.7",
     "axios": "0.19.0",
+    "buefy": "^0.8.8",
+    "leaflet": "^1.6.0",
     "lodash": "4.17.15",
     "normalize.css": "8.0.1",
     "nprogress": "0.2.0",
     "vue": "2.6.10",
     "vue-meta": "2.2.2",
     "vue-router": "3.1.3",
+    "vue2-leaflet": "^2.2.1",
     "vuex": "3.1.1"
   },
   "devDependencies": {
