--- a/src/app.config.json
+++ b/src/app.config.json
@@ -1,4 +1,4 @@
 {
-  "title": "Vue Enterprise Boilerplate",
-  "description": "Opinionated boilerplate project for an enterprise Vue frontend"
+  "title": "Ambrozone",
+  "description": "Cool map with cool ambroziya"
 }
