--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "frontend",
-  "version": "0.0.0",
+  "name": "ambrozone",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "vue-cli-service serve",
