--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "vue-router": "3.1.3",
     "vue-social-sharing": "^2.4.7",
     "vue2-leaflet": "^2.2.1",
-    "vuex": "3.1.1"
+    "vuex": "3.1.1",
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.11.x",
